--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 .appLogo {
-  width: 10%;
-  height: auto;
+  width: 5%;
 }
 
 .navBar {
@@ -30,8 +29,22 @@
   padding: 10px;
   margin: 5px;
   width: 200px;
+  word-wrap: break-word;
 }
 
 .resCard > img {
   width: 100%;
+}
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.shimmer-card {
+  padding: 10px;
+  margin: 5px;
+  width: 200px;
+  height: 400px;
+  background-color: #f0f0f0;
 }
